[package]
name = "gjio"
version = "0.1.0"
authors = ["David Renshaw <david@sandstorm.io>"]
license = "MIT"
description = "Asynchronous input and output."
repository = "https://github.com/dwrensha/gjio"

readme = "README.md"

keywords = ["promise", "async", "io"]

[dependencies]
gj = "0.2"
time = "0.1"
nix = "0.5"
miow = "0.1"
net2 = "0.2.23"