[package]
name = "gjio"
version = "0.1.3"
authors = ["David Renshaw <david@sandstorm.io>"]
license = "MIT"
description = "Asynchronous input and output."
repository = "https://github.com/dwrensha/gjio"
documentation = "https://docs.rs/gjio/"

readme = "README.md"

keywords = ["promise", "async", "io"]

[dependencies]
gj = "0.2"
time = "0.1"

[target.'cfg(unix)'.dependencies]
nix = "0.5"

[target.'cfg(windows)'.dependencies]
miow = "0.1"
net2 = "0.2.23"